--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - checkout:
           path: ~/footprints
-      - ruby/intall-deps
+      - ruby/install-deps
       - run:
           name: Database setup
           command: bundle exec rails db:migrate
