--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,8 @@ jobs:
     docker:
       - image: circleci/ruby:2.6.5
     steps:
-      - checkout
+      - checkout:
+          path: ~/footprints
       - setup_remote_docker:
           version: 19.03.13
       - heroku/install
