--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.6.5
     steps:
-      - checkout:
-          path: ~/footprints
+      - checkout
       - setup_remote_docker:
           version: 19.03.13
       - heroku/install
@@ -59,6 +58,12 @@ jobs:
       - run:
           name: database setup
           command: heroku run bundle exec rake db:migrate RAILS_ENV=production -a $HEROKU_APP_NAME
+      - run:
+          name: yarn Install
+          command: yarn install
+      - run: 
+          name: bundle exec bin/webpack
+          command: bundle exec bin/webpack
 
     
 workflows:
